--- a/app/globals.css
+++ b/app/globals.css
@@ -27,10 +27,16 @@
   @apply !ml-2 md:!ml-5;
 }
 
-.pagination li:first-child a,
-li:last-child a {
+.pagination li:first-child a {
   @apply w-auto px-3 md:px-5 rounded-none
 }
+
+/* .pagination li:last-child a {
+  @apply w-auto px-3 md:px-5 rounded-none
+} */
+
+
+
 
 .prose h1, h2, h3, h4 {
   @apply !font-medium text-slate-900
