--- a/app/globals.css
+++ b/app/globals.css
@@ -31,12 +31,9 @@
   @apply w-auto px-3 md:px-5 rounded-none
 }
 
-/* .pagination li:last-child a {
+.pagination li:last-child a {
   @apply w-auto px-3 md:px-5 rounded-none
-} */
-
-
-
+}
 
 .prose h1, h2, h3, h4 {
   @apply !font-medium text-slate-900
